--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <footer class="bg-transparent text-center py-4 mt-5">
         <div class="container">
-            <p class="mb-0">&copy; 2025 Alejandro Herrera - alejandromarimilich@gmail.com . All rights reserved.</p>
+            <p class="mb-0">&copy; 2025 IEEE IAB Registry Data Viewer. All rights reserved.</p>
         </div>
     </footer>
 
