--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IEEE IAB Registry Data Viewer</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Explore and download IEEE IAB registry data, including OUI vendors. Search, filter, and export in JSON or SQL formats.">
+    <meta name="keywords" content="IEEE IAB, OUI registry, vendor lookup, MAC address, network devices">
+    <meta name="author" content="IEEE IAB Registry Data Viewer">
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="IEEE IAB Registry Data Viewer">
+    <meta property="og:description" content="Explore and download IEEE IAB registry data, including OUI vendors. Search, filter, and export in JSON or SQL formats.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:image" content="https://yourdomain.com/og-image.jpg"> <!-- Replace with actual image -->
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="IEEE IAB Registry Data Viewer">
+    <meta name="twitter:description" content="Explore and download IEEE IAB registry data.">
+    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg"> <!-- Replace with actual image -->
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://yourdomain.com">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome for icons -->
