--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <footer class="bg-transparent text-center py-4 mt-5">
         <div class="container">
-            <p class="mb-0">&copy; 2025 IEEE IAB Registry Data Viewer. All rights reserved.</p>
+            <p class="mb-0">&copy; Alejandro Herrera 2025 IEEE IAB Registry Data Viewer. All rights reserved. Alejandromarmilich@gmail.com</p>
         </div>
     </footer>
 
