--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <meta property="og:title" content="IEEE IAB Registry Data Viewer">
     <meta property="og:description" content="Explore and download IEEE IAB registry data, including OUI vendors. Search, filter, and export in JSON or SQL formats.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com">
-    <meta property="og:image" content="https://yourdomain.com/og-image.jpg"> <!-- Replace with actual image -->
+    <meta property="og:url" content="https:///alejandroHAR.github.io/oui-registry-viewer">
+    <meta property="og:image" content="https:///alejandroHAR.github.io/og-image.jpg"> <!-- Replace with actual image -->
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="IEEE IAB Registry Data Viewer">
     <meta name="twitter:description" content="Explore and download IEEE IAB registry data.">
-    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg"> <!-- Replace with actual image -->
+    <meta name="twitter:image" content="https:///alejandroHAR.github.io//twitter-image.jpg"> <!-- Replace with actual image -->
     <!-- Canonical URL -->
     <link rel="canonical" href="https://yourdomain.com">
     <!-- Bootstrap CSS -->
