--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <meta property="og:title" content="IEEE IAB Registry Data Viewer">
     <meta property="og:description" content="Explore and download IEEE IAB registry data, including OUI vendors. Search, filter, and export in JSON or SQL formats.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https:///alejandroHAR.github.io/oui-registry-viewer">
+    <meta property="og:url" content="https://alejandrohar.github.io/oui-registry-viewer-json-sql">
     <meta property="og:image" content="https:///alejandroHAR.github.io/og-image.jpg"> <!-- Replace with actual image -->
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="IEEE IAB Registry Data Viewer">
     <meta name="twitter:description" content="Explore and download IEEE IAB registry data.">
-    <meta name="twitter:image" content="https:///alejandroHAR.github.io//twitter-image.jpg"> <!-- Replace with actual image -->
+    <meta name="twitter:image" content="https://alejandrohar.github.io/oui-registry-viewer-json-sql/twitter-image.jpg"> <!-- Replace with actual image -->
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://yourdomain.com">
+    <link rel="canonical" href="https://alejandrohar.github.io/oui-registry-viewer-json-sql">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome for icons -->
