--- a/index.html
+++ b/index.html
@@ -4,28 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IEEE IAB Registry Data Viewer</title>
-    <!-- SEO Meta Tags -->
     <meta name="description" content="Explore and download IEEE IAB registry data, including OUI vendors. Search, filter, and export in JSON or SQL formats.">
     <meta name="keywords" content="IEEE IAB, OUI registry, vendor lookup, MAC address, network devices">
     <meta name="author" content="IEEE IAB Registry Data Viewer">
-    <!-- Open Graph Tags -->
     <meta property="og:title" content="IEEE IAB Registry Data Viewer">
     <meta property="og:description" content="Explore and download IEEE IAB registry data, including OUI vendors. Search, filter, and export in JSON or SQL formats.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://alejandrohar.github.io/oui-registry-viewer-json-sql">
-    <meta property="og:image" content="https:///alejandroHAR.github.io/og-image.jpg"> <!-- Replace with actual image -->
-    <!-- Twitter Card Tags -->
+    <meta property="og:image" content="https:///alejandroHAR.github.io/og-image.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="IEEE IAB Registry Data Viewer">
     <meta name="twitter:description" content="Explore and download IEEE IAB registry data.">
-    <meta name="twitter:image" content="https://alejandrohar.github.io/oui-registry-viewer-json-sql/twitter-image.jpg"> <!-- Replace with actual image -->
-    <!-- Canonical URL -->
+    <meta name="twitter:image" content="https://alejandrohar.github.io/oui-registry-viewer-json-sql/twitter-image.jpg">
     <link rel="canonical" href="https://alejandrohar.github.io/oui-registry-viewer-json-sql">
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome for icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -62,12 +55,9 @@
             <p id="initialLoadingText" class="mt-2">Loading data...</p>
         </div>
 
-        <!-- Estadísticas Cards -->
         <div class="row mb-4 fade-in" id="statsRow">
-            <!-- Cards se llenarán con JS -->
         </div>
 
-        <!-- Sección de Búsqueda -->
         <div class="search-section fade-in">
             <div class="row g-3 align-items-end">
                 <div class="col-md-4 col-sm-12">
@@ -78,7 +68,6 @@
                     <label id="typeLabel" for="filterType" class="form-label fw-bold">Type</label>
                     <select class="form-select filter-select" id="filterType">
                         <option value="">All</option>
-                        <!-- Opciones se llenarán con JS -->
                     </select>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -97,7 +86,6 @@
             </div>
         </div>
 
-        <!-- Resultados -->
         <div class="results-table fade-in mb-5">
             <div class="d-flex justify-content-between align-items-center p-3 bg-light border-bottom" style="background: rgba(255,255,255,0.05) !important; border-bottom: 1px solid rgba(255,255,255,0.1);">
                 <div>
@@ -121,7 +109,6 @@
                         </tr>
                     </thead>
                     <tbody id="tableBody">
-                        <!-- Filas se llenarán con JS -->
                     </tbody>
                 </table>
             </div>
@@ -129,10 +116,8 @@
                 <i class="fas fa-search fa-3x mb-3" style="color: rgba(255,255,255,0.5);"></i>
                 <p id="noResultsText">No results found. Try adjusting your filters.</p>
             </div>
-            <!-- Paginación -->
             <nav aria-label="Results pagination" class="d-flex justify-content-center py-3">
                 <ul class="pagination" id="pagination">
-                    <!-- Páginas se llenarán con JS -->
                 </ul>
             </nav>
         </div>
@@ -143,10 +128,7 @@
             <p class="mb-0">&copy; Alejandro Herrera 2025 IEEE IAB Registry Data Viewer. All rights reserved. Alejandromarmilich@gmail.com</p>
         </div>
     </footer>
-
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
     <script src="js/script.js"></script>
 </body>
 </html>
